<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbackground"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="120dp"
        android:text="@string/welcome_message"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/darker_gray"
        android:text="@string/button1"
        android:alpha="0.78"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:alpha="0.78"
        android:background="@android:color/darker_gray"
        android:text="@string/button2"

        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:alpha="0.78"
        android:background="@android:color/darker_gray"
        android:text="@string/button3"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:alpha="0.78"
        android:background="@android:color/darker_gray"
        android:text="@string/button4"

        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />


</LinearLayout>